Fix: Figcaption is hidden by the button inserter in the editor

--- a/src/editor-style.scss
+++ b/src/editor-style.scss
@@ -28,11 +28,11 @@
 				}
 			}
 		}
+	}
 
-		figcaption {
-			position: relative;
-			z-index: 1;
-		}
+	> figcaption {
+		position: relative;
+		z-index: 1;
 	}
 
 	&.is-selected > table {
